codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_collapse_plan_empty_full.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"┃ ›                                                                                                                    │"
"┃                                                                                                                      │"
"┃                                                                                                                      │"
"┃                                                                                                                      │"
"┃                                                                                                                      │"
"┃                                                                                                                      │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"  ? shortcuts · Plan mode (Shift+Tab cycle)                                                          100% context left  "
